# mongodb-influxdb

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml  tests.yml  vulnerability-scan.yml
integration/: docker-compose.yml  push-data.mongodb  query.flux  smoke_test.sh
src/: channel.rs  health.rs  influxdb.rs  lib.rs  main.rs  mongodb.rs
src/line_protocol/: data_point.rs  field_value.rs  mod.rs
