[package]
name = "mongodb-influxdb"
version = "3.0.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap-verbosity-flag = "2.0"
flate2 = "1.0"
futures-util = "0.3"
humantime = "2.1"
itoa = "1.0"
mongodb = "2.7"
ryu = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio-stream = { version = "0.1", features = [ "net", "time" ] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.4"

[dependencies.clap]
version = "4.4"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "json" ]

[dependencies.tokio]
version = "1.33"
features = [ "macros", "net", "rt-multi-thread", "sync", "time" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
mockito = "1.2"
