[package]
name = "mongodb-influxdb"
version = "3.0.18"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap-verbosity-flag = { version = "3.0", features = [ "tracing" ] }
flate2 = "1.1"
futures-util = "0.3"
humantime = "2.1"
itoa = "1.0"
ryu = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio-stream = { version = "0.1", features = [ "net", "time" ] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.5"

[dependencies.clap]
version = "4.5"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.mongodb]
version = "3.3"
default-features = false
features = [ "bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls" ]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [ "json" ]

[dependencies.tokio]
version = "1.43"
features = [ "macros", "net", "rt-multi-thread", "sync", "time" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
mockito = "1.7"
trycmd = "0.15.10"
