[package]
name = "mongodb-influxdb"
version = "3.0.19"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
humantime = "2.3.0"
itoa = "1.0.17"
ryu = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = { version = "0.4.1", default-features = false }
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio-stream = { version = "0.1.17", features = ["net", "time"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"


[dependencies.mongodb]
version = "3.4.1"
default-features = false
features = ["bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls"]

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "net", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
mockito = "1.7.1"
trycmd = "1.0.0"
